Closed Bug 883234 Opened 12 years ago Closed 12 years ago

Fix some GGC orange from the lazy parsing landing

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file)

Attached patch v0Splinter Review
There appears to be a single new (or newly exposed) site which creates functions that can flow into scripts later. Based on the comment and the small number of test failures, this looks like a rare case: we should just pre-tenure here.
Attachment #762761 - Flags: review?(bhackett1024)
Whoops, meant to add one other thing before submitting: The test removal is because an identical test (the same name even) is checked in under jit-tests/tests/ion.
Attachment #762761 - Flags: review?(bhackett1024) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: