Bug 883234 - Fix GGC oranges caused by lazy parsing; r=bhackett

Lazy parsing allows a new function clone site to flow into scripts. This site
needs to create its functions tenured.

--HG--
extra : rebase_source : fecc7ff5de3994b0fc8eda01c13b8cd9f00d1d52